# MCPacker

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
lib/: Utility.hpp
src/: Mod.cpp  Mod.hpp  ModPack.cpp  ModPack.hpp  ModPackManager.hpp  Utility.hpp  main.cpp
src/core/: Mod.cpp  Mod.hpp  ModPack.hpp  ModPackManager.cpp  ModPackManager.hpp
src/ui/: MainFrame.cpp  MainFrame.hpp
