cmake_minimum_required(VERSION 3.22.1)
project(MCPacker)
set(CXX_STANDARD 20)
find_package(Boost 1.83.0 REQUIRED)
find_package(wxWidgets REQUIRED COMPONENTS core base)
include_directories(lib/utfcpp-4.0.5)
add_executable(MCPacker src/main.cpp src/Mod.cpp src/ModPack.cpp src/ModPackManager.cpp)
target_compile_features(MCPacker PUBLIC cxx_std_20)
target_link_libraries(MCPacker ${wxWidgets_LIBRARIES})